# cpp_cicd

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
include/: db_handler.h  qr_scanner.h
src/: db_handler.cpp  main.cpp  qr_scanner.cpp
